fix: fixed issue with alignment within tour items

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ body {
 }
 
 .main-container {
-    margin-bottom: 7.5rem;
+    margin-bottom: 6rem;
     overflow: auto;
 }
 
@@ -222,6 +222,16 @@ body {
 
 .album-title-block {
     text-align: center;
+}
+
+/*------------------------------ Tour Main Section*/
+
+.tour-item {
+    border-top: 1px solid #212529;
+    margin-bottom: .5rem;
+    padding-top: .5rem;
+    display: flex;
+    align-items: center;
 }
 
 /*------------------------------ Media Queries*/
